# async-watcher

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bomp.ron  cog.toml  flake.nix  treefmt.toml
.github/workflows/: release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: error.rs  lib.rs
examples/channel/: Cargo.toml
examples/channel/src/: main.rs
examples/rebuild/: Cargo.toml
examples/rebuild/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
flake-parts/: bomper.nix  cargo.nix  ci.nix  formatting.nix  pre-commit.nix  rust-toolchain.nix  shells.nix
