[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/justinrubek/async-watcher"
repository = "https://github.com/justinrubek/async-watcher"
readme = "README.md"
authors = ["Justin Rubek"]

[workspace.dependencies]
notify = "5.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.38"
tracing = "0.1.37"
