[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
authors = ["Justin Rubek"]
edition = "2021"
homepage = "https://github.com/justinrubek/async-watcher"
license = "MIT"
readme = "README.md"
repository = "https://github.com/justinrubek/async-watcher"
version = "0.2.1"

[workspace.dependencies]
notify = "5.1.0"
serde_json = "1.0.87"
thiserror = "1.0.38"
tracing = "0.1.37"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]
